# training-consolidation-workbench

./: .gitignore  LICENSE  README.md  WARP.md  docker-compose.yml  prime_sensor.ps1  prime_sensor.py  prime_sensor.sh  purge_data.ps1  purge_data.py  pyproject.toml  start_infra.sh  upload_test_suite.py  verify_harmonization.py  verify_module_1.ps1  verify_module_1.sh  verify_module_2.ps1  verify_module_2.sh  verify_module_3.ps1  verify_sensor.ps1  verify_sensor.sh  verify_sensor_upload.py
baml_client/: inlinedbaml.py
baml_src/: clients.baml
config/: master_engineering.yaml
config/templates/: 1hour.yaml  30min.yaml  8hour.yaml  multiday.yaml  standard.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  store.ts
frontend/src/components/: AssetDrawer.tsx  ConsolidationCanvas.tsx  LayoutContext.tsx  MarkdownEditor.tsx  SlideInspector.tsx  (+5 more)
scripts/: verify_render_trigger.py
src/dspy_modules/: config.py  outline_harmonizer.py  synthesizer.py
src/ingestion/: assets.py  extraction.py  layout_detector.py  pptx_media_extractor.py  rendering.py  sensors.py
src/pipelines/: definitions.py
src/publishing/: assets.py  pptx_generator.py  typst_generator.py
src/semantic/: assets.py  extraction.py  harmonization.py  models.py  sensors.py
src/services/: generator_service.py  synthesis_service.py
src/storage/: __init__.py  dagster_resources.py  minio.py  neo4j.py  weaviate.py
src/utils/: generate_test_docs.py
src/workbench/: main.py  models.py
tests/: test_direct_pptx.py  test_direct_pptx_gen.py  test_hybrid_extraction.py
(+1 files in other folders)
